✨ feat(service): 引数と設定値の追加により、コミット履歴取得範囲を柔軟に設定可能に 📝 chore(config): config.iniに開始日・終了日・デフォルト日数の設定を追加

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -8,6 +8,12 @@ default_author =
 # デフォルトの出力形式（table, json, csv）
 output_format = json
 
+# デフォルトの開始日（YYYY-MM-DD形式、空白の場合は自動計算）
+default_since_date =
+
+# デフォルトの終了日（YYYY-MM-DD形式、空白の場合は今日）
+default_until_date =
+
 [OUTPUT]
 # ファイル保存の有効/無効
 save_to_file = True
