--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
-pyinstaller
-pytest
-pytest-cov
-uv
+altgraph==0.17.4
+annotated-types==0.7.0
+anthropic==0.60.0
+anyio==4.9.0
+certifi==2025.7.14
+colorama==0.4.6
+coverage==7.10.1
+distro==1.9.0
+dotenv==0.9.9
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+jiter==0.10.0
+packaging==25.0
+pefile==2023.2.7
+pluggy==1.6.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyinstaller==6.14.2
+pyinstaller-hooks-contrib==2025.8
+pytest==8.4.1
+pytest-cov==6.2.1
+python-dotenv==1.1.1
+pywin32-ctypes==0.2.3
+setuptools==80.9.0
+sniffio==1.3.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uv==0.8.4
