--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altgraph==0.17.4
 annotated-types==0.7.0
 anthropic==0.60.0
 anyio==4.9.0
+babel==2.17.0
 certifi==2025.7.14
 colorama==0.4.6
 coverage==7.10.1
@@ -31,6 +32,7 @@ python-dotenv==1.1.1
 pywin32-ctypes==0.2.3
 setuptools==80.9.0
 sniffio==1.3.1
+tkcalendar==1.6.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uv==0.8.4
