--- a/utils/config.ini
+++ b/utils/config.ini
@@ -3,10 +3,16 @@ repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
 default_author = 
 output_format = json
 default_since_date = 2025-07-22
-default_until_date = 
+default_until_date =
 
 [OUTPUT]
 save_to_file = True
 output_directory = C:\Users\yokam\PycharmProjects\CodeDiary\logs
 filename_format = commit_history_%Y%m%d_%H%M%S.txt
+
+[UI]
+calendar_background = darkblue
+calendar_foreground = white
+calendar_select_background = gray80
+calendar_select_foreground = black
 
