✨ refactor(service): 出力フォーマットのjson処理を削除して簡素化 📝 fix(service): 不要なコメントとコードを整理し、実行時の環境設定を維持

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -3,10 +3,9 @@ repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
 default_author = 
 output_format = json
 
-[OUTPUT]
-save_to_file = True
-output_directory = C:\Users\yokam\PycharmProjects\CodeDiary\logs
-filename_format = commit_history_%Y%m%d_%H%M%S.txt
+[WindowSettings]
+window_width = 1150
+window_height = 800
 
 [UI]
 calendar_background = darkblue
