✨ feat(service): 日本語のコメントと警告メッセージを追加し、フォーム自動入力の信頼性を向上

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -7,6 +7,9 @@ output_format = json
 window_width = 1150
 window_height = 800
 
+[URL]
+form_url = https://forms.gle/cEnjC4A7rFdMs6dD6
+
 [UI]
 calendar_background = darkblue
 calendar_foreground = white
