✨ feat(app/main_window.py): 日本語ロケール設定とUIの一部文言を更新

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -2,8 +2,8 @@
 repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
 
 [WindowSettings]
-window_width = 1150
-window_height = 800
+window_width = 800
+window_height = 600
 
 [URL]
 form_url = https://forms.gle/cEnjC4A7rFdMs6dD6
@@ -13,6 +13,11 @@ calendar_background = darkblue
 calendar_foreground = white
 calendar_select_background = gray80
 calendar_select_foreground = black
+
+[DiaryText]
+font = メイリオ
+font_size = 12
+
 
 
 
