✨ config_manager: 環境変数からAIプロバイダー設定と利用可能プロバイダー一覧を取得可能にした 📝 config_manager: get_active_provider関数を追加し、優先プロバイダーの判定とフォールバック処理を実装 🔧 config_manager: 各プロバイダーのAPIキー・モデル・思考予算を環境変数から取得し、アクセスしやすく整理

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -18,6 +18,10 @@ calendar_select_foreground = black
 font = メイリオ
 font_size = 11
 
+[AI] # claude, openai, gemini
+provider = openai
+fallback_provider = gemini
+
 
 
 
