✨ feat(service/google_form_automation.py): Chromeパスの取得と存在確認を追加 🔧 chore(utils/config.ini): Chromeのパス設定を追加し、設定ファイルを更新

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,9 +1,16 @@
+[AI] # claude, openai, gemini
+provider = openai
+fallback_provider = gemini
+
 [GIT]
 repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
 
 [WindowSettings]
 window_width = 600
 window_height = 600
+
+[Chrome]
+chrome_path = C:\Program Files\Google\Chrome\Application\chrome.exe
 
 [URL]
 form_url = https://forms.gle/cEnjC4A7rFdMs6dD6
@@ -17,11 +24,4 @@ calendar_select_foreground = black
 [DiaryText]
 font = メイリオ
 font_size = 11
-
-[AI] # claude, openai, gemini
-provider = openai
-fallback_provider = gemini
-
-
-
 
