--- a/requirements.txt
+++ b/requirements.txt
@@ -3,36 +3,62 @@ annotated-types==0.7.0
 anthropic==0.60.0
 anyio==4.9.0
 babel==2.17.0
+beautifulsoup4==4.13.4
+cachetools==5.5.2
 certifi==2025.7.14
+charset-normalizer==3.4.3
 colorama==0.4.6
 coverage==7.10.1
 distro==1.9.0
 dotenv==0.9.9
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.178.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
 greenlet==3.2.3
+grpcio==1.74.0
+grpcio-status==1.71.2
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 jiter==0.10.0
+openai==1.99.5
 packaging==25.0
 pefile==2023.2.7
 playwright==1.54.0
 pluggy==1.6.0
+proto-plus==1.26.1
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 pyee==13.0.0
 Pygments==2.19.2
 pyinstaller==6.14.2
 pyinstaller-hooks-contrib==2025.8
+pyparsing==3.2.3
 pyperclip==1.9.0
 pytest==8.4.1
 pytest-cov==6.2.1
 python-dotenv==1.1.1
 pywin32-ctypes==0.2.3
+requests==2.32.4
+rsa==4.9.1
 setuptools==80.9.0
 sniffio==1.3.1
+soupsieve==2.7
 tkcalendar==1.6.1
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+uritemplate==4.2.0
+urllib3==2.5.0
 uv==0.8.4
