✨ feat(service/google_form_automation.py): Chromeパス取得時の例外処理を改善しエラーを明確化 🛠️ style(utils/config.ini): デフォルトのfallback_providerをopenaiに変更

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,6 +1,6 @@
 [AI] # claude, openai, gemini
 provider = gemini
-fallback_provider = gemini
+fallback_provider = openai
 
 [GIT]
 repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
