✨ config: 更新AIプロバイダー設定をOpenAIに変更

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,6 +1,6 @@
-[AI] # claude, openai, gemini
-provider = gemini
-fallback_provider = openai
+[AI] # claude, openai, gemini gpt-5-mini,gemini-2.5-flash
+provider = openai
+fallback_provider = gemini
 
 [Chrome]
 chrome_path = C:\Program Files\Google\Chrome\Application\chrome.exe
