--- a/utils/config.ini
+++ b/utils/config.ini
@@ -12,6 +12,12 @@ font_size = 11
 [GIT]
 repository_path = C:/Users/yokam/PycharmProjects/CodeDiary
 
+[GITHUB]
+# GitHub API設定（環境変数で設定することを推奨）
+# token = your_github_token_here
+# username = your_github_username_here
+enable_cross_repo_tracking = true
+
 [UI]
 calendar_background = darkblue
 calendar_foreground = white
