--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 jiter==0.10.0
+nodeenv==1.9.1
 openai==1.99.5
 packaging==25.0
 pefile==2023.2.7
@@ -46,6 +47,7 @@ pyinstaller==6.14.2
 pyinstaller-hooks-contrib==2025.8
 pyparsing==3.2.3
 pyperclip==1.9.0
+pyright==1.1.407
 pytest==8.4.1
 pytest-cov==6.2.1
 python-dotenv==1.1.1
