✨ feat(widget): 設定されたsticky値を"wens"に修正し、スタイルの一貫性を向上させる 🔧 fix(widget): gridのsticky指定をタプルから文字列に変更し、動作を安定させる ✨ feat(api): APIクライアントの型アノテーションをOptionalにして安全性を向上させる 🔧 fix(api): response.usageがNoneの場合に備え、トークン数の取得を条件付きに修正 ✨ feat(サービス): 関数の引数にOptional型を追加し、引数未設定時の安全性を向上させる 🔧 fix(サービス): get_commit_historyの引数にOptionalを設定し、型安全性を向上させる

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,7 +1,7 @@
 {
   "typeCheckingMode": "standard",
   "pythonVersion": "3.12",
-  "include": ["app","services","utils","widgets"],
+  "include": ["app","service","external_service","utils","widgets","scripts"],
   "exclude": ["tests", "scripts"],
   "reportMissingTypeStubs": false,
   "reportUnusedVariable": true,
