--- a/utils/config.ini
+++ b/utils/config.ini
@@ -23,6 +23,7 @@ calendar_select_foreground = black
 
 [URL]
 form_url = https://forms.gle/cEnjC4A7rFdMs6dD6
+draft_url = https://www.ipcl-jp.com/awsystem/order/drafts
 
 [WindowSettings]
 window_width = 800
