🔧(config): Chromeパス設定を更新

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -2,7 +2,7 @@
 provider = openai
 fallback_provider = gemini
 
-[Chrome]
+[Chrome] # C:\Program Files (x86)\Google\Chrome\Application　の端末あり
 chrome_path = C:\Program Files\Google\Chrome\Application\chrome.exe
 
 [DiaryText]
