✨ feat(config): ウィンドウ位置とサイズを保存・復元する ✨ feat(changelog): TextBlock型チェック機能とコピーボタン制御ロジック整理を追加 ✨ feat(readme): プロジェクト概要、主要機能、前提条件、インストール手順、使用方法、開発者向け情報、トラブルシューティング、バージョン、ライセンス、サポートを更新 ✨ feat(main_window): ウィンドウ位置とサイズを保存・復元する機能を追加

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,8 +1,8 @@
-[AI] # claude, openai, gemini gpt-5-mini,gemini-2.5-flash
+[AI]
 provider = openai
 fallback_provider = gemini
 
-[Chrome] # C:\Program Files (x86)\Google\Chrome\Application　の端末あり
+[Chrome]
 chrome_path = C:\Program Files\Google\Chrome\Application\chrome.exe
 
 [DiaryText]
@@ -28,3 +28,6 @@ draft_url = https://www.ipcl-jp.com/awsystem/order/drafts
 [WindowSettings]
 window_width = 800
 window_height = 600
+window_x = 648
+window_y = 64
+
