--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -5,5 +5,6 @@
   "exclude": ["tests", "scripts"],
   "reportMissingTypeStubs": false,
   "reportUnusedVariable": true,
-  "reportUnusedImport": true
+  "reportUnusedImport": true,
+  "reportPrivateImportUsage": false
 }
