--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,6 +1,6 @@
 [AI] # openai, claude, gemini
 provider = gemini
-fallback_provider = gemini
+fallback_provider = openai
 
 [Chrome]
 chrome_path = C:\Program Files\Google\Chrome\Application\chrome.exe
@@ -23,7 +23,6 @@ calendar_select_foreground = black
 
 [URL]
 form_url = https://forms.gle/cEnjC4A7rFdMs6dD6
-draft_url = https://www.ipcl-jp.com/awsystem/order/drafts
 
 [WindowSettings]
 window_width = 800
